--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
-    <title>HoloSpeed</title>
-  <link rel="stylesheet" crossorigin href="./index-2h8141cj.css"><script type="module" crossorigin src="./index-z8m5a6j3.js"></script></head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
+  <!-- IOS Test -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <title>HoloSpeed</title>
+<link rel="stylesheet" crossorigin href="./index-s42fg7v1.css"><script type="module" crossorigin src="./index-c8ajqpew.js"></script></head>
+
+<body>
+  <div id="root"></div>
+  
+</body>
+
 </html>
