--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
-  <!-- IOS Test -->
+  <!-- Manifest -->
+  <link rel="manifest" href="/manifest.json">
+  <!-- More IOS tests -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="HoloSpeed">
+
   <title>HoloSpeed</title>
 </head>
 
