--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
-  <!-- IOS Test -->
+  <!-- Manifest -->
+  <link rel="manifest" href="manifest.json">
+  <!-- More IOS tests -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="HoloSpeed">
+
   <title>HoloSpeed</title>
-<link rel="stylesheet" crossorigin href="./index-s42fg7v1.css"><script type="module" crossorigin src="./index-c8ajqpew.js"></script></head>
+<link rel="stylesheet" crossorigin href="./index-40f8ws82.css"><script type="module" crossorigin src="./index-v8ey9424.js"></script></head>
 
 <body>
   <div id="root"></div>
