--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-title" content="HoloSpeed">
 
   <title>HoloSpeed</title>
-<link rel="stylesheet" crossorigin href="./index-s5854ypx.css"><script type="module" crossorigin src="./index-6zgt0g69.js"></script></head>
+<link rel="stylesheet" crossorigin href="./index-s5854ypx.css"><script type="module" crossorigin src="./index-4sr56zcc.js"></script></head>
 
 <body>
   <div id="root"></div>
